@startuml

title __MODELE's Class Diagram__\n

  package Modele {
    class CatalogueDAO_Oracle {
        - url : String
        - login : String
        - pdw : String
        - cn : Connection
        - st : Statement
        - seConnecter()
        - seDeconnecter()
        + addCatalogue()
        + deleteCatalogue()
        + getListeCatalogues()
        + getNbProduits()
        + getCatalogue()
    }
  }
  

  package Modele {
    class CatalogueDAO_XML {
        - uri : String
        - doc : Document
        + CatalogueDAO_XML()
        + addCatalogue()
        + deleteCatalogue()
        + getListeCatalogues()
        + getNbProduits()
        + getCatalogue()
        - sauvegarde()
        - chercheCatalogue()
    }
  }
  

  package Modele {
    interface FabriqueAbstraite {
        {abstract} + createProduitDAO()
        {abstract} + createCatalogueDAO()
    }
  }
  

  package Modele {
    class FactoryDAO_Oracle {
        + createProduitDAO()
        + createCatalogueDAO()
    }
  }
  

  package Modele {
    class FactoryDAO_XML {
        + createProduitDAO()
        + createCatalogueDAO()
    }
  }
  

  package Modele {
    interface I_CatalogueDAO {
        {abstract} + addCatalogue()
        {abstract} + deleteCatalogue()
        {abstract} + getListeCatalogues()
        {abstract} + getNbProduits()
        {abstract} + getCatalogue()
    }
  }
  

  package Modele {
    interface I_ProduitDAO {
        {abstract} + addProduit()
        {abstract} + updateProduit()
        {abstract} + deleteProduit()
        {abstract} + getListeProduits()
        {abstract} + getUnProduit()
    }
  }
  

  package Modele {
    class ProduitAdaptateurDAO_XML {
        + addProduit()
        + updateProduit()
        + deleteProduit()
        + getListeProduits()
        + getUnProduit()
    }
  }
  

  package Modele {
    class ProduitDAO_Oracle {
        - url : String
        - login : String
        - pdw : String
        - cn : Connection
        - st : Statement
        - seConnecter()
        - seDeconnecter()
        + addProduit()
        + updateProduit()
        + deleteProduit()
        + getListeProduits()
        + getUnProduit()
    }
  }
  

  package Modele {
    class ProduitDAO_XML {
        - uri : String
        - doc : Document
        + ProduitDAO_XML()
        + creer()
        + maj()
        + supprimer()
        + lire()
        + lireTous()
        - sauvegarde()
        - chercheProduit()
    }
  }
  

  CatalogueDAO_Oracle -up-|> I_CatalogueDAO
  CatalogueDAO_XML -up-|> I_CatalogueDAO
  FactoryDAO_Oracle -up-|> FabriqueAbstraite
  FactoryDAO_XML -up-|> FabriqueAbstraite
  ProduitAdaptateurDAO_XML -up-|> I_ProduitDAO
  ProduitAdaptateurDAO_XML o-- ProduitDAO_XML : produitDAO_xml
  ProduitDAO_Oracle -up-|> I_ProduitDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
